initial working sample

--- a/app/pages/teamA/teamA.html
+++ b/app/pages/teamA/teamA.html
@@ -6,5 +6,15 @@
 </ion-navbar>
 
 <ion-content class="teamA">
+<div padding>
+  <ion-segment [(ngModel)]="performance">
+    <ion-segment-button value="batting">
+      Batting
+    </ion-segment-button>
+    <ion-segment-button value="bowling">
+      Bowling
+    </ion-segment-button>
+  </ion-segment>
+</div>
 
 </ion-content>
