--- a/app/pages/teamB/teamB.html
+++ b/app/pages/teamB/teamB.html
@@ -6,5 +6,14 @@
 </ion-navbar>
 
 <ion-content class="teamB">
-
+<div padding>
+  <ion-segment [(ngModel)]="performance">
+    <ion-segment-button value="batting">
+      Batting
+    </ion-segment-button>
+    <ion-segment-button value="bowling">
+      Bowling
+    </ion-segment-button>
+  </ion-segment>
+</div>
 </ion-content>
